MOW-532 fix jumping panel width
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@63191 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/menu-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/menu-styles.scss
@@ -242,6 +242,11 @@ $classicToolbar: 50px;
 				}
 			}
 		}
+		&.mow {
+			.gwt-StackPanel .gwt-StackPanelItem {
+				min-width: 255px;
+			}
+		}
 		&.animateIn {
 			animation-duration: 0.25s;
 			animation-name: animateIn;
